Revision history for DBIx-Class-Helper-Row-Enumeration:

{{$NEXT}}
  [Bug Fixes]
  - Require enum columns to have a list of values.

  - Do not create a "0" method for unspecified coderef handers.

  [Other]
  - Minor code reformatting.

v0.1.3    2018-08-30 18:03:57+01:00 Europe/London
  [Enhancements]
  - Only check for a defined value if the column is nullable.

  [Bug Fixes]
  - Allow classes to be reloaded, #1 @arc

v0.1.2    2018-07-29 22:56:43+01:00 Europe/London
  [Tests]
  - Add SQL::Translator as a test prerequisite.

v0.1.1    2018-07-29 18:11:59+01:00 Europe/London
  [Documentation]
  - Fixed typo in SEE ALSO and added link to DBIx::Class.

v0.1.0    2018-07-29 18:07:35+01:00 Europe/London
 - Initial release.