@@ -186,8 +186,31 @@ altogether.
 
 =head2 Autogenerated Classes
 
-You cannot override the configuration with autogenerated classes.
-This issue will be addressed in a later version.
+You can use column modifiers to update autogenerated classes created
+by the likes of L<DBIx::Class::Schema::Loader>.  However, the C<extra>
+attributes are not deep-merged, so you will have to repeat them when
+if you want to specify custom handlers, e.g.
+
+  # Created by DBIx::Class::Schema::Loader etc.
+  # DO NOT MODIFY THIS OR ANYTHING ABOVE! etc.
+
+  __PACKAGE__->load_components(qw/ Helper::Row::Enumeration /);
+
+  __PACKAGE__->add_columns(
+
+    '+foo', # using default handlers
+
+    '+baz' => {
+        extra   => {
+            list    => [qw/ good bad ugly /],
+            handles => { ... },
+        },
+    },
+
+  );
+
+Note that this is by design, since the intention column modifiers is
+to override existing values.
 
 =head1 SEE ALSO
 
