@@ -1,6 +1,9 @@
 Revision history for DBIx-Class-Helper-Row-Enumeration:
 
 {{$NEXT}}
+  [Docuentation]
+  - Documented workaround for autogenerated schema classes.
+
   [Bug Fixes]
   - Require enum columns to have a list of values.
 
